<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#6200ee"
    android:fitsSystemWindows="true"
    tools:context=".activities.login">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="134dp"
        android:background="#6200ee"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/forget_password"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/here_enter_your_email_id_for_verfication"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/shape"
                android:gravity="center"
                android:hint="@string/enter_a_email_id"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->

        <com.spark.submitbutton.SubmitButton
            android:id="@+id/btn_reset_password"

            android:layout_width="231dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dip"

            android:text="@string/reset_password"

            android:textColor="@color/gray"
            app:sub_btn_background="@color/white"
            app:sub_btn_duration="3000"
            app:sub_btn_line_color="@color/colorAccent"
            app:sub_btn_ripple_color="@color/selected_dot"
            app:sub_btn_tick_color="@color/white" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:text="@string/back"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
