<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.AddExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountTextInputEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/amount"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/dateLinerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:padding="4dp"
                    android:text="@string/date"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    android:padding="4dp"
                    android:text="@string/_11_09_2017"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="4dp"
                    android:text="@string/category"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="23dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionTextInputEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="14"
                android:hint="@string/description"
                android:inputType="textPersonName|textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>