<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerback"

    tools:context="com.avinash.expensetracker.activities.login">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497">

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/logins"
            app:layout_constraintBottom_toTopOf="@+id/editEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editEmail"


            android:layout_width="240dp"

            android:layout_height="64dp"
            android:layout_marginTop="224dp"

            android:gravity="center"

            android:hint="@string/enter_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="#6200ee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="240dp"
            android:layout_height="64dp"

            android:layout_marginTop="17dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#6200ee"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintEnd_toEndOf="@+id/editEmail"
            app:layout_constraintStart_toStartOf="@+id/editEmail"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            app:layout_constraintVertical_bias="0.016" />

        <com.spark.submitbutton.SubmitButton
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.Button.Borderless"

            android:layout_width="200dp"
            android:layout_height="96dp"


            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713"
            app:sub_btn_background="@color/white"
            app:sub_btn_duration="2500"
            app:sub_btn_line_color="@color/selected_dot"
            app:sub_btn_ripple_color="@color/colorAccent"
            app:sub_btn_tick_color="@color/white" />

        <Button
            android:id="@+id/btn_reset_password"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginBottom="92dp"
            android:gravity="center"
            android:text="@string/forget"
            android:textAllCaps="false"
            android:textColor="#6200ee"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonRegister"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="44dp"
            android:text="@string/login_signup_hint"
            android:textAllCaps="false"
            android:textColor="#6200ee"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
